--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,7 +23,7 @@
         .set('X-API-Key', 'foobar')
         .then(function (res) {
           const htmlTable_prefix = `<table border='1' style='width:100%;border-width:1px;border-color:black;'>
-          <tr>
+          <tr style='background: lightgray'>
             <th>UID</th>
             <th>Email</th>
             <th>Verified</th>
