--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,25 +15,27 @@
   <script>
 
     function reset_password(email) {
-      const url = 'resetpassword';
-      const headers = {
-        'Content-Type': 'application/json'
-      };
-      const body = {
-        email,
-      };
+      if(confirm("Send a reset-password email to the user's email?")) {
+        const url = 'resetpassword';
+        const headers = {
+          'Content-Type': 'application/json'
+        };
+        const body = {
+          email,
+        };
 
-      return superagent
-        .post(url)
-        .set(headers)
-        .send(JSON.stringify(body))
-        .then(res => {
-          if(res && res.body && res.body.isSuccessful) {
-            alert(`Password-reset email was sent!`);
-          } else {
-            alert(`Failed to send password-reset email!`);
-          }
-        })
+        return superagent
+          .post(url)
+          .set(headers)
+          .send(JSON.stringify(body))
+          .then(res => {
+            if(res && res.body && res.body.isSuccessful) {
+              alert(`Password-reset email was sent!`);
+            } else {
+              alert(`Failed to send password-reset email!`);
+            }
+          });
+      }
     }
 
     (function () {
