--- a/src/public/index.html
+++ b/src/public/index.html
@@ -104,7 +104,7 @@
           refreshUserList();
         });
       } else {
-        console.log(`Email=${email} (${typeof(email)})`);
+        console.error(`Email=${email} (${typeof(email)})`);
       }
     }
 
